tests/ui/provide_type_mismatch.stderr
error[E0271]: type mismatch resolving `<BadLoggerModule as Module>::Capability == Arc<dyn Logger + Send + Sync>`
  --> tests/ui/provide_type_mismatch.rs:55:47
   |
55 |     let _ = BadLoggerBuilder::new().kit(&kit).provide::<MainLogger>(); // should fail: Arc<ConcreteLogger> != Arc<dyn Logger>
   |                                               ^^^^^^^ type mismatch resolving `<BadLoggerModule as Module>::Capability == Arc<dyn Logger + Send + Sync>`
   |
note: expected this to be `Arc<(dyn Logger + Send + Sync + 'static)>`
  --> tests/ui/provide_type_mismatch.rs:34:23
   |
34 |     type Capability = Arc<ConcreteLogger>; // WRONG: should be Arc<dyn Logger + Send + Sync>
   |                       ^^^^^^^^^^^^^^^^^^^
   = note: expected struct `Arc<(dyn Logger + Send + Sync + 'static)>`
              found struct `Arc<ConcreteLogger>`
   = help: `ConcreteLogger` implements `Logger` so you could box the found value and coerce it to the trait object `Box<dyn Logger>`, you will have to change the expected type as well
note: required by a bound in `KitModuleBuilder::<M, B>::provide`
  --> src/kit/builder.rs
   |
   |     pub fn provide<K>(self) -> Result<Arc<K::Capability>, KitError>
   |            ------- required by a bound in this associated function
...
   |         M: Module<Capability = Arc<K::Capability>>,
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `KitModuleBuilder::<M, B>::provide`
